feat: initialize owner admin and backend for it
